# SpeedyNote

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  POWERPOINT_SUPPORT.md  README.md  app_icon.rc  build-alpine-arm64.sh  build-package.sh  compile-mac.sh  compile.ps1  compile.sh  packaging.iss  packaging.iss.in  plans.txt  resources.qrc  translate.ps1  translate.sh
.github/workflows/: build-android.yml  build-darwin.yml  build-linux.yml  build-windows.yml  build_android.yml  notify-support.yml
android/: Dockerfile  build-mupdf.sh  build-speedynote.sh  build-test-app.sh  debug.keystore
android/app-resources/: AndroidManifest.xml  build.gradle
data/: org.speedynote.SpeedyNote.desktop  org.speedynote.SpeedyNote.metainfo.xml  org.speedynote.app.desktop  org.speedynote.app.metainfo.xml
docs/: ACTIONBAR_QA.md  ACTIONBAR_SUBPLAN.md  ANDROID_BUG_TRACKING.md  ANDROID_BUILD_GUIDE.md  ANDROID_PORT_QA.md  ANDROID_SHARE_IMPORT_PLAN.md  BUG_TRACKING.md  DELAYED_CACHING_SUBPLAN.md  IOS_BUG_TRACKING.md  LAYER_PANEL_RESTYLE_SUBPLAN.md  MAINWINDOW_ANALYSIS.md  MAINWINDOW_CLEANUP_QA.md  MAINWINDOW_CLEANUP_SUBPLAN.md  MARKDOWN_NOTES_ARCHITECTURE.md  MARKDOWN_NOTES_QA.md  MARKDOWN_NOTES_SUBPLAN.md  MEMORY_LEAK_FIX_SUBPLAN.md  MIGRATION_DOC1_SUBPLAN.md  MIGRATION_EDGELESS_SUBPLAN.md  MIGRATION_LAYER_SUBPLAN.md  MIGRATION_OBJECTS_SUBPLAN.md  MIGRATION_PHASE0_COMBINED_CANVAS.md  MIGRATION_PHASE0_INTERACTIONS.md  MIGRATION_PHASE0_WIDGETS.md  MIGRATION_PHASE1_2_SUBPLAN.md  MIGRATION_PHASE1_3_SUBPLAN.md  MIGRATION_PHASE1_SUBPLAN.md  MIGRATION_PHASE2B_SUBPLAN.md  MIGRATION_PHASE2C_SUBPLAN.md  MIGRATION_PHASE2_SUBPLAN.md  MIGRATION_PHASE3_1_SUBPLAN.md  MIGRATION_PHASE3_NOTES.md  MIGRATION_PHASE3_SUBPLAN.md  MIGRATION_TOUCH_GESTURE_SUBPLAN.md  PACKAGING_LAUNCHER_QA.md  PACKAGING_LAUNCHER_SUBPLAN.md  PAGE_PANEL_QA.md  PAGE_PANEL_SUBPLAN.md  PDF_OUTLINE_PANEL_QA.md  PDF_OUTLINE_PANEL_SUBPLAN.md  (+14 more)
docs/build_docs/: ANDROID_BUILD_GUIDE.md  IOS_BUILD_GUIDE.md  SpeedyNote_Linux_Build_en.md  SpeedyNote_Windows_Build_en.md
docs/zh_Hans/: IOS_BUILD_GUIDE.md  README_zh_Hans.md  SpeedyNote_Linux_Build_zh-Hans.md  SpeedyNote_Windows_Build_zh-Hans.md  build.md
flatpak/: org.speedynote.SpeedyNote.yml  org.speedynote.app.yml
ios/: Info.plist  build-device.sh  build-mupdf.sh  build-sim.sh  fetch-mlkit.sh  generate-icons.sh
markdown/: CMakeLists.txt
resources/styles/: buttons.qss  buttons_dark.qss  launcher.qss  launcher_dark.qss  markdown_sidebar.qss  markdown_sidebar_dark.qss  tabs.qss  tabs_dark.qss
resources/translations/: app_de.ts  app_es.qm  app_es.ts  app_fr.qm  app_fr.ts  app_pt.ts  app_zh.qm  app_zh.ts
source/: ControlPanelDialog.cpp  ControlPanelDialog.h  DocumentConverter.cpp  DocumentConverter.h  ExistingPictureDialog.cpp  ExistingPictureDialog.h  InkCanvas.cpp  InkCanvas.h  LauncherWindow.cpp  LauncherWindow.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow_OLD.cpp  MainWindow_OLD.h  Main_OLD.cpp  MarkdownNoteEntry.cpp  MarkdownNotesSidebar.cpp  MarkdownNotesSidebar.h  PdfOpenDialog.cpp  PictureSourceDialog.cpp  PictureSourceDialog.h  PictureWindow.cpp  PictureWindowManager.cpp  PictureWindowManager.h  RecentNotebooksManager.cpp  RecentNotebooksManager.h  SDLControllerManager.cpp  SimpleAudio.cpp  SpnPackageManager.cpp  SpnPackageManager.h  ToolType.h  VectorCanvas.cpp  VectorCanvas.h
source/batch/: BatchOperations.cpp  BatchOperations.h  ExportQueueManager.cpp
source/cli/: CliHandler.cpp  CliParser.cpp  CliParser.h  CliProgress.cpp  CliProgress.h
source/compat/: qt_compat.h
source/core/: DarkModeUtils.cpp  DarkModeUtils.h  Document.cpp  Document.h  DocumentManager.cpp  DocumentManager.h  DocumentTests.h  DocumentViewport.cpp  DocumentViewport.h  DocumentViewportTests.h  MarkdownNote.cpp  MarkdownNote.h  NotebookLibrary.cpp  NotebookLibrary.h  Page.cpp  Page.h  ShortcutManager.cpp  ShortcutManager.h  ToolType.h  TouchGestureHandler.cpp  TouchGestureHandler.h  TouchGestureHandlerLegacy.cpp  TouchGestureHandlerLegacy.h
source/input/: DialController.cpp  DialController.h  DialTypes.h  MouseDialHandler.cpp  MouseDialHandler.h
source/ios/: IOSPlatformHelper.h  IOSPlatformHelper.mm  IOSShareHelper.mm  PdfPickerIOS.h  PdfPickerIOS.mm  SnbxPickerIOS.mm
source/layers/: VectorLayer.h
source/objects/: ImageObject.cpp  ImageObject.h  InsertedObject.cpp  InsertedObject.h  LinkObject.cpp  LinkObject.h  OcrTextObject.cpp  OcrTextObject.h  TextBoxObject.cpp  TextBoxObject.h
source/ocr/: OcrEngine.cpp  OcrEngine.h  OcrLineGrouper.h  OcrTextBlock.h  OcrWorker.cpp  OcrWorker.h
source/ocr/engines/: MlKitOcrEngine.cpp  MlKitOcrEngine.h  MlKitOcrEngine_android.cpp  MlKitOcrEngine_ios.mm  WindowsInkOcrEngine.cpp  WindowsInkOcrEngine.h
source/pdf/: MuPdfExporter.cpp  MuPdfExporter.h  MuPdfExporterTests.h  MuPdfProvider.cpp  MuPdfProvider.h  PdfMismatchDialog.cpp  PdfProvider.h  PdfProviderFactory.cpp  PdfRelinkDialog.cpp  PdfRelinkDialog.h  PdfSearchEngine.cpp  PdfSearchEngine.h  PopplerPdfProvider.cpp  PopplerPdfProvider.h
source/platform/: SystemNotification.cpp  SystemNotification.h
source/sharing/: ExportDialog.cpp  ExportDialog.h  NotebookImporter.cpp
source/strokes/: StrokePoint.h  VectorStroke.h
source/text/: MarkdownNoteEntry.cpp  MarkdownNoteEntry.h
source/ui/: DebugOverlay.cpp  DialModeToolbar.cpp  DialModeToolbar.h  LayerPanel.cpp  LayerPanel.h  MarkdownNotesSidebar.cpp  MarkdownNotesSidebar.h  NavigationBar.cpp  NavigationBar.h  PagePanel.cpp  PagePanel.h  PageThumbnailDelegate.cpp  PageThumbnailDelegate.h  PageThumbnailModel.cpp  PageThumbnailModel.h  SplitViewManager.cpp  SplitViewManager.h  TabBar.cpp  TabBar.h  TabManager.cpp  TabManager.h  ThemeColors.h  ThumbnailRenderer.cpp  ThumbnailRenderer.h  Toolbar.cpp  Toolbar.h  ToolbarButtonTestWidget.h  ToolbarButtonTests.h  ToolbarButtons.cpp  ToolbarButtons.h
source/ui/actionbars/: ActionBar.cpp  ActionBar.h  ActionBarContainer.cpp  ActionBarContainer.h  LassoActionBar.cpp  (+5 more)
source/viewport/: BackgroundWidget.cpp  BackgroundWidget.h  LayerWidget.cpp  LayerWidget.h  PageWidget.cpp  PageWidget.h
(+111 files in other folders)
